--- a/Lab_2/Lab_2_part_2.ipynb
+++ b/Lab_2/Lab_2_part_2.ipynb
@@ -4,11 +4,23 @@
    "cell_type": "markdown",
    "id": "600da46a",
    "metadata": {},
-   "source": []
+   "source": [
+    "<br>Лабороторна робота номер 2\n",
+    "<br>Частина 2\n",
+    "<br>Створіть програму, яка дозволить користувачам малювати графік функції гармоніки (функція виду y(t) = A*sin(ωt +φ)) з накладеним шумом та надавати можливість змінювати параметри гармоніки та шуму за допомогою інтерактивного інтерфейсу, що містить слайдери, кнопки та чекбокси. Зашумлену гармоніку відфільтруйте за допомогою фільтру на вибір, порівняйте результат. Використовуйте будь-яку бібліотеку на ваш вибір – matplotlib, seaborn, plotly тощо."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0310707e",
+   "metadata": {},
+   "source": [
+    "Завантаження потрібних бібліотек"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "a7c9aa30",
    "metadata": {},
    "outputs": [],
@@ -25,8 +37,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "711efb72",
+   "metadata": {},
+   "source": [
+    "Задання паратметрів за замовчуванням"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "cb45417a",
    "metadata": {},
    "outputs": [],
@@ -51,8 +71,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ef8f152e",
+   "metadata": {},
+   "source": [
+    "Функція що генерує чисту гармоніку для масиву t"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "603ae128",
    "metadata": {},
    "outputs": [],
@@ -60,10 +88,44 @@
     "# ---------- Utility functions ----------\n",
     "def harmonic(t, A, freq, phase):\n",
     "    return A * np.sin(2 * np.pi * freq * t + phase)\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a9e39bb",
+   "metadata": {},
+   "source": [
+    "Функція що генерує вектор ґаусового шуму з mean і стандартним відхиленням sigma. rng — об’єкт np.random.default_rng() (краще, ніж старий np.random)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "8968eb17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def generate_noise(rng, size, mean, variance):\n",
     "    sigma = np.sqrt(max(variance, 0.0))\n",
-    "    return rng.normal(loc=mean, scale=sigma, size=size)\n",
+    "    return rng.normal(loc=mean, scale=sigma, size=size)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b3f4164",
+   "metadata": {},
+   "source": [
+    "Функція що переводить частоти зрізу у нормалізовані згідно з частотою Найквіста (nyq = fs/2) і повертає коефіцієнти b, a фільтра Butterworth."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "281a493e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "def design_filter(filter_type, order, cutoff1, cutoff2, fs):\n",
     "    nyq = 0.5 * fs\n",
@@ -78,21 +140,45 @@
     "        b, a = signal.butter(order, Wn, btype='band')\n",
     "    else:\n",
     "        raise ValueError(\"Unknown filter type\")\n",
-    "    return b, a\n",
-    "\n",
+    "    return b, a\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "765c43fe",
+   "metadata": {},
+   "source": [
+    "filtfilt — zero-phase filtering (обробка вперед-назад) — усуває фазову деформацію.\n",
+    "Якщо filtfilt не спрацює (наприклад, сигнал занадто короткий або коефіцієнти некоректні), робимо lfilter як запасний варіант (але lfilter дає фазову зміну)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "0c49a166",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def apply_filter(b, a, data):\n",
     "    # zero-phase filtering\n",
     "    try:\n",
     "        return signal.filtfilt(b, a, data)\n",
     "    except Exception as e:\n",
     "        # filtfilt can fail for very short signals or unstable filters; fallback to lfilter\n",
-    "        return signal.lfilter(b, a, data)\n",
-    "\n"
+    "        return signal.lfilter(b, a, data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d8e7c83b",
+   "metadata": {},
+   "source": [
+    "Створення інтерфейса"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "93ea32dc",
    "metadata": {},
    "outputs": [],
@@ -236,7 +322,7 @@
     "        layout.addWidget(spin)\n",
     "        return spin\n",
     "\n",
-    "    def on_harmonic_param_changed(self, *_):\n",
+    "    def on_harmonic_param_changed(self, *   _):\n",
     "        # Update stored harmonic params; do not regenerate noise\n",
     "        self.params[\"amplitude\"] = float(self.amp_spin.value())\n",
     "        self.params[\"frequency\"] = float(self.freq_spin.value())\n",
@@ -328,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "ef58fa11",
    "metadata": {},
    "outputs": [
@@ -352,22 +438,6 @@
     "if __name__ == \"__main__\":\n",
     "    main()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6ccf7ba8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b66987eb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
