--- a/Lab_2/Lab_2_part_2.ipynb
+++ b/Lab_2/Lab_2_part_2.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "id": "a7c9aa30",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "id": "cb45417a",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "id": "603ae128",
    "metadata": {},
    "outputs": [],
@@ -96,12 +96,12 @@
    "id": "1a9e39bb",
    "metadata": {},
    "source": [
-    "Функція що генерує вектор ґаусового шуму з mean і стандартним відхиленням sigma. rng — об’єкт np.random.default_rng() (краще, ніж старий np.random)."
+    "Функція що генерує вектор ґаусового шуму з mean і стандартним відхиленням sigma. rng — об’єкт np.random.default_rng() "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "id": "8968eb17",
    "metadata": {},
    "outputs": [],
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "id": "281a493e",
    "metadata": {},
    "outputs": [],
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "id": "0c49a166",
    "metadata": {},
    "outputs": [],
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "93ea32dc",
    "metadata": {},
    "outputs": [],
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "id": "ef58fa11",
    "metadata": {},
    "outputs": [
