lab 1 new mistake

--- a/Lab_1/lab1.ipynb
+++ b/Lab_1/lab1.ipynb
@@ -126,7 +126,7 @@
    "id": "78b7437a",
    "metadata": {},
    "source": [
-    "Функція що робить data-clining та зчитування даних."
+    "Функція що робить data-cleaning та зчитування даних."
    ]
   },
   {
